# pyside-config

./: pyproject.toml  pyside-config.code-workspace
src/pyside_config/: __init__.py  _base.py  _config_manager.py  _handlers.py  _pyside_config.py  base.py  config.py  config_manager.py  helpers.py  properties.py  registry.py  utils.py  widgets.py
