[project]
name = "pyside-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "devduck", email = "frederik.kraemer@dev-duck.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.0",
    "attrs>=26.1.0",
    "loguru>=0.7.3",
    "bidict>=0.23.1",
    "pyside-widgets",
]

[tool.uv.sources]
pyside-widgets = { url = "https://github.com/fred-kr/pyside-widgets/releases/download/v0.1.0/pyside_widgets-0.1.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
